# Corvus

./: .commitlintrc.json  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/: branch-protection.md
.github/workflows/: ci.yml  main.yml
Instructions/: Presentacion Corvus Mejorada.md  Proyecto Corvus - Sprints.md  Sprint 1.md
backend/: .coverage  .env.example  .flake8  alembic.ini  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/corvus/: main.py
backend/corvus/api/routes/: connectors.py
backend/corvus/config/: database.py
backend/corvus/models/: connector.py
backend/corvus/schemas/: connector.py
backend/docker/: Dockerfile
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/api/: test_connectors.py
frontend/: jest.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json
frontend/docker/: Dockerfile
frontend/src/: App.tsx  main.tsx  routes.tsx  theme.ts
frontend/src/api/: connectors.ts
frontend/src/components/connectors/: ConnectorDialog.tsx  ConnectorForm.tsx  ConnectorsList.tsx
frontend/src/components/connectors/__tests__/: ConnectorsList.test.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/config/: env.ts  test-env.ts
frontend/src/config/__tests__/: env.test.ts
frontend/src/theme/: theme.ts
